--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 html{
-    background-color: red;
+    background-color: hsla(346, 100%, 50%, 0.175);
+}
+#logo{
+
+    height: 400px ;
+    width: 700px;
 }
